--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "imgbb-uploader": "^1.3.3",
+    "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.1",
